# Yet-Another-Software-Rasterizer

./: .clang-format  .clang-tidy  .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  wasm.profile  wasm.recipe.py
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake  compiler.cmake  conan.cmake
src/: CMakeLists.txt  main.cpp  web_main.cpp
src/common/: CMakeLists.txt  app.cpp  app.hpp  color.cpp  color.hpp  file_util.cpp  file_util.hpp  image.hpp  model.cpp  model.hpp  stb_image_impl.cpp  yasr.cpp  yasr.hpp  yasr_raii.hpp
test/: CMakeLists.txt  main.cpp
www/: index.html
